[workspace]
members = ["github_accept_webhook", "glue"]

[package]
name = "webhook_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
cron = "0.12.1"
futures = "0.3.30"
hex-literal = "0.4.1"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
# matchit = { git = "https://github.com/Totodore/matchit.git", branch = "ft-remove-node" } # wait until https://github.com/ibraheemdev/matchit/pull/49 is merged
tokio = { version = "1.37.0", features = ["full"] }
wasm-bridge = { version = "0.3.1", features = ["async"] }
wasmtime = "19.0.1"
wasmtime-wasi = "19.0.1"
