[workspace]
members = ["config_parser", "github_accept_webhook", "glue", "shared"]

[package]
name = "webhook_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
# matchit = { git = "https://github.com/Totodore/matchit.git", branch = "ft-remove-node" } # wait until https://github.com/ibraheemdev/matchit/pull/49 is merged
anyhow = "1.0.81"
config_parser = { path = "./config_parser" }
cron = "0.12.1"
dotenv = "0.15.0"
futures = "0.3.30"
glue = { path = "./glue" }
hex-literal = "0.4.1"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0.197", features = ["derive"] }
shared = { path = "./shared" }
tokio = { version = "1.37.0", features = ["full"] }
tokio-async-drop = "0.1.0"
wasm-bridge = { version = "0.4.0", features = ["async"] }
wasmtime = "19.0.1"
wasmtime-wasi = "19.0.1"
