[workspace]
members = ["config_parser", "github_accept_webhook", "glue", "shared"]

[workspace.dependencies]
anyhow = "1.0.82"
cron = "0.12.1"
dotenv = "0.15.0"
futures = "0.3.30"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = "1.2.0"
hyper-util = "0.1.3"
postcard = "1.0.8"
serde = "1.0.198"
serde_with = "3.7.0"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
tokio = "1.37.0"
tokio-async-drop = "0.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.8.0"
wasmtime = "19.0.2"
wasmtime-wasi = "19.0.2"

[package]
name = "webhook_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
# matchit = { git = "https://github.com/Totodore/matchit.git", branch = "ft-remove-node" } # wait until https://github.com/ibraheemdev/matchit/pull/49 is merged
anyhow = { workspace = true }
config_parser = { path = "./config_parser" }
cron = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
glue = { path = "./glue" }
hex-literal = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
postcard = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
shared = { path = "./shared" }
tokio = { workspace = true, features = ["full"] }
tokio-async-drop = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
