[package]
name = "config_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
cron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
glue = { path = "../glue" }
tokio = { workspace = true }
derivative = "2.2.0"
