[package]
name = "config_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cron = { workspace = true }
derivative = { workspace = true }
glue = { path = "../glue" }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
