[package]
name = "glue"
version = "0.1.0"
edition = "2021"
description = "Crate to interact from Rust with WASM"

[dependencies]
anyhow = { workspace = true }
# paste = "1.0.14"
tokio = { workspace = true, features = ["sync"] }
tokio-async-drop = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
shared = { path = "../shared" }
