# tracking issue: https://github.com/rust-lang/cargo/issues/9406
# cargo-features = ["per-package-target"]

[package]
name = "github_accept_webhook"
version = "0.1.0"
edition = "2021"
# forced-target = "wasm32-wasi"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
hex = { workspace = true }
shared = { path = "../../shared" }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true, features = ["log"] }
wasm_shared = { path = "../../../wasm_shared" }
